nginx-test-app-1/simple/ns.yml
apiVersion: v1
kind: Namespace
metadata:
  name: dev-1
  labels:
    name: dev-1
