nginx-test-app-1/simple/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-1
  namespace: dev-1
  labels:
    app: nginx-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
        ports:
        - containerPort: 80
