nginx-test-app-1/simple/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-app-svc
  namespace: dev-1
spec:
  type:  ClusterIP
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
